hw_03/k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check-deployment
  labels:
    app: health-check
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-check
  template:
    metadata:
      labels:
        app: health-check
    spec:
      containers:
        - name: health-check-container
          image: nislovskaya/hw_02:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
