hw_03/k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
  namespace: m
spec:
  selector:
    app: health-check
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
