hw_03/k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
  namespace: m
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/nislovskaya/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
